--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,6 @@ AuthType Basic
 
 AuthName “Password Protected Area”
 
-AuthUserFile /c/Users/dion/website/.htpasswd
+AuthUserFile //c//Users//dion//website//.htpasswd
 
 Require valid-user
